--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   - PUPPET_VERSION="~> 3.2.0"
   - PUPPET_VERSION="~> 3.3.0"
   - PUPPET_VERSION="~> 3.4.0"
+  - PUPPET_VERSION="~> 3.5.0"
+  - PUPPET_VERSION="~> 3.6.0"
 matrix:
   exclude:
     # No support for Ruby 1.9 before Puppet 2.7
