--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,15 @@ rvm:
   - 2.0.0
   - 2.1.5
 env:
-  - PUPPET_GEM_VERSION="~> 2.7.0"
-  - PUPPET_GEM_VERSION="~> 3.4.0"
-  - PUPPET_GEM_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 2.7.0"
+  - PUPPET_VERSION="~> 3.4.0"
+  - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 matrix:
   exclude:
     - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+      env: PUPPET_VERSION="~> 2.7.0"
     - rvm: 2.1.5
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+      env: PUPPET_VERSION="~> 2.7.0"
