--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 bundler_args: --without development
 script:
-  - RAKE_ENV=ci bundle exec rake
+  - RAKE_ENV=ci bundle exec rake validate
+  - RAKE_ENV=ci bundle exec rake spec
+  - RAKE_ENV=ci bundle exec rake lint
 rvm:
   - 1.8.7
   - 1.9.3
@@ -9,10 +11,10 @@ rvm:
 env:
   - PUPPET_VERSION="~> 2.7.0"
   - PUPPET_VERSION="~> 3.4.0"
-  - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 3.5.0" #STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.6.0" #STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" #STRICT_VARIABLES=yes
+  #- PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 matrix:
   exclude:
     - rvm: 2.0.0
