disable linting for travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ bundler_args: --without development
 script:
   - RAKE_ENV=ci bundle exec rake validate
   - RAKE_ENV=ci bundle exec rake spec
-  - RAKE_ENV=ci bundle exec rake lint
+#  - RAKE_ENV=ci bundle exec rake lint
 rvm:
   - 1.8.7
   - 1.9.3
