--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 bundler_args: --without development
+sudo: false
+cache:
+  - bundler
+  - directories:
+    - $HOME/librarian-puppet
 script:
   - RAKE_ENV=ci bundle exec rake validate
   - RAKE_ENV=ci bundle exec rake spec
 #  - RAKE_ENV=ci bundle exec rake lint
 rvm:
-  - 1.8.7
   - 1.9.3
   - 2.0.0
-  - 2.1.5
+  - 2.1.6
 env:
   - PUPPET_VERSION="~> 2.7.0"
   - PUPPET_VERSION="~> 3.4.0"
@@ -20,5 +24,5 @@ matrix:
   exclude:
     - rvm: 2.0.0
       env: PUPPET_VERSION="~> 2.7.0"
-    - rvm: 2.1.5
+    - rvm: 2.1.6
       env: PUPPET_VERSION="~> 2.7.0"
