--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ env:
   - PUPPET_VERSION="~> 3.6.0" #STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.7.0" #STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.8.0" #STRICT_VARIABLES=yes
-  #- PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 3.7.0" FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 3.8.0" FUTURE_PARSER=yes
 matrix:
   exclude:
     - rvm: 2.0.0
