--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ rvm:
 env:
   - PUPPET_VERSION="~> 2.7.0"
   - PUPPET_VERSION="~> 3.4.0"
-  - PUPPET_VERSION="~> 3.5.0" #STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.6.0" #STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.7.0" #STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.8.0" #STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.7.0" FUTURE_PARSER=yes
-  - PUPPET_VERSION="~> 3.8.0" FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 matrix:
   exclude:
     - rvm: 2.0.0
