test ssh key presence

--- a/spec/fixtures/hiera/default.yaml
+++ b/spec/fixtures/hiera/default.yaml
@@ -12,6 +12,7 @@ accounts::users:
       'myawesomefirstkey':
         type: 'ssh-rsa'
         key: 'yay'
+        comment: 'test'
       'myawesomesecondkey':
         type: 'ssh-rsa'
-        key: 'yay'
+        key: 'hey'
