--- a/spec/fixtures/hiera/test.yaml
+++ b/spec/fixtures/hiera/test.yaml
@@ -1,1 +1,9 @@
 ---
+accounts::users:
+  root:
+    uid: 0
+    shell: '/bin/bash'
+    ssh_keys:
+      'root_key1':
+        type: 'ssh-rsa'
+        key: 'AAA_key1'
