--- a/spec/fixtures/hiera/default.yaml
+++ b/spec/fixtures/hiera/default.yaml
@@ -24,7 +24,7 @@ accounts::users:
         key: 'AAA_key2'
   superman:
     comment: 'Clark Kent'
-    groups: ['superheroes']
+    groups: ['sudo']
     ssh_keys:
       'super_key':
         type: 'ssh-dss'
