don't assign absent users to groups

--- a/spec/fixtures/hiera/default.yaml
+++ b/spec/fixtures/hiera/default.yaml
@@ -38,3 +38,7 @@ accounts::users:
       'bat_key':
         type: 'ssh-dss'
         key: 'AAABBBatman'
+  deadpool:
+    comment: 'Deadpool'
+    ensure: 'absent'
+    groups: ['superheroes']
