fix issues with starting acceptance tests

--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -2,12 +2,12 @@ HOSTS:
   debian-76-x64:
     roles:
       - master
+      - default
     platform: debian-7-amd64
     box: fgrehm/wheezy64-lxc
     box_url: https://vagrantcloud.com/fgrehm/boxes/wheezy64-lxc
     hypervisor: vagrant
-    ip: '10.0.3.20'
+    lxc__bridge_name: 'lxcbr0'
 CONFIG:
   log_level: verbose
-  type: git
-  masterless: true
+  type: foss
