configure vagrant boxes

--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,7 +1,7 @@
 HOSTS:
   debian-76-x64:
     roles:
-      - default
+      - agent
     platform: debian-7-amd64
     box: fgrehm/wheezy64-lxc
     box_url: https://vagrantcloud.com/fgrehm/boxes/wheezy64-lxc
