--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,12 +1,12 @@
 HOSTS:
-  debian-76-x64:
-    roles:
-      - agent
-    platform: debian-7-amd64
-    box: fgrehm/wheezy64-lxc
-    box_url: https://vagrantcloud.com/fgrehm/boxes/wheezy64-lxc
-    hypervisor: vagrant
-    lxc__bridge_name: 'lxcbr0'
+  debian-8-x64:
+    platform: debian-8-amd64
+    hypervisor : docker
+    image: debian:8
+    docker_preserve_image: true
+    docker_image_commands:
+      - 'apt-get install -y wget'
 CONFIG:
+  masterless: true
   log_level: verbose
   type: foss
