--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,12 +1,10 @@
 HOSTS:
-  debian-8-x64:
-    platform: debian-8-amd64
-    hypervisor : docker
-    image: debian:8
+  ubuntu-14.04:
+    platform: ubuntu-14.04-x64
+    image: ubuntu:14.04
+    hypervisor: docker
     docker_preserve_image: true
-    docker_image_commands:
-      - 'apt-get install -y wget'
 CONFIG:
-  masterless: true
   log_level: verbose
+  masterless: true
   type: foss
