run acceptance tests on ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - RAKE_ENV=ci bundle exec rake validate
   - RAKE_ENV=ci bundle exec rake spec
 #  - RAKE_ENV=ci bundle exec rake lint
-  - RAKE_ENV=ci bundle exec rake acceptance
+  - BEAKER_set=ubuntu-1404-docker RAKE_ENV=ci bundle exec rake acceptance
 rvm:
 # google-api-client doesn't support ruby < 2.0
 #  - 1.9.3
