disable automated beaker tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,14 @@ cache:
 script:
   - RAKE_ENV=ci bundle exec rake validate
   - RAKE_ENV=ci bundle exec rake spec
-#  - RAKE_ENV=ci bundle exec rake lint
-  - BEAKER_set=ubuntu-1404-docker RAKE_ENV=ci bundle exec rake acceptance
+  - RAKE_ENV=ci bundle exec rake lint
+#  - BEAKER_set=ubuntu-1404-docker RAKE_ENV=ci bundle exec rake acceptance
 rvm:
 # google-api-client doesn't support ruby < 2.0
 #  - 1.9.3
 # see http://rubies.travis-ci.org/
   - 2.0.0
-  - 2.1.8
+  - 2.1.10
 env:
 #  - BEAKER_set="debian-8-docker"
   - PUPPET_VERSION="~> 3.4.0"
@@ -29,4 +29,5 @@ env:
   - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
   - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
-  - PUPPET_VERSION="~> 4.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 4.3.0" STRICT_VARIABLES=yes
