--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,16 @@ env:
   - PUPPET_VERSION="~> 4.3.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 4.7.0" STRICT_VARIABLES=yes
 matrix:
-  include:
+  allow_failures:
   - rvm: 2.3.1
     dist: trusty
     env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04
+    script: bundle exec rake beaker
+    services: docker
+    sudo: required
+  - rvm: 2.3.1
+    dist: trusty
+    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/centos-7
     script: bundle exec rake beaker
     services: docker
     sudo: required
