--- a/spec/acceptance/nodesets/debian-8.yml
+++ b/spec/acceptance/nodesets/debian-8.yml
@@ -9,3 +9,4 @@ HOSTS:
       - 'apt-get update && apt-get install -y net-tools wget locales strace lsof && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen'
 CONFIG:
   trace_limit: 200
+  type: foss
