--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 bundler_args: --without development
 sudo: false
-#services:
-#  - docker
+language: ruby
 addons:
   apt:
     packages:
@@ -34,15 +33,18 @@ env:
   - PUPPET_VERSION="~> 4.7.0" STRICT_VARIABLES=yes
 matrix:
   include:
-  - rvm: 2.3.1
-    dist: trusty
-    env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
-    script: bundle exec rake beaker
-    services: docker
-    sudo: required
-  - rvm: 2.3.1
-    dist: trusty
-    env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
-    script: bundle exec rake beaker
-    services: docker
-    sudo: required
+    - rvm: 2.3.1
+      dist: trusty
+      env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
+    - rvm: 2.3.1
+      dist: trusty
+      env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
+  allow_failures:
+    - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
+    - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
