--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,13 @@ matrix:
       script: bundle exec rake beaker
       services: docker
       sudo: required
+    - rvm: 2.3.1
+      dist: trusty
+      env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian-8
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
   allow_failures:
     - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
     - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
+    - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian-8
