--- a/spec/acceptance/nodesets/centos-7.yml
+++ b/spec/acceptance/nodesets/centos-7.yml
@@ -1,6 +1,6 @@
 HOSTS:
   centos-7-x64:
-    platform: el-7-x86_64
+    platform: centos-7-x86_64
     hypervisor: docker
     image: centos:7
     docker_preserve_image: true
