--- a/spec/acceptance/nodesets/centos7-3.8.yml
+++ b/spec/acceptance/nodesets/centos7-3.8.yml
@@ -3,6 +3,7 @@ HOSTS:
     platform: el-7-x86_64
     hypervisor : docker
     image: deric/centos7-puppet:3.8.7
+    docker_cmd: '["/usr/sbin/init"]'
     docker_preserve_image: false
 CONFIG:
   masterless: true
