--- a/.travis.yml
+++ b/.travis.yml
@@ -41,13 +41,13 @@ matrix:
       sudo: required
     - rvm: 2.3.1
       dist: trusty
-      env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
+      env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos7-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
     - rvm: 2.3.1
       dist: trusty
-      env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian-8
+      env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian8-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
