update acceptance readme and test matrix (#58)

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,25 +33,23 @@ env:
   - PUPPET_VERSION="~> 4.7.0" STRICT_VARIABLES=yes
 matrix:
   include:
-    - rvm: 2.3.1
+    - rvm: 2.3.2
       dist: trusty
       env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
       script: bundle exec rake acceptance
       services: docker
       sudo: required
-    - rvm: 2.3.1
+    - rvm: 2.3.2
       dist: trusty
       env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos7-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
-    - rvm: 2.3.1
+    - rvm: 2.3.2
       dist: trusty
       env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian8-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
-  allow_failures:
-    - env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
-    - env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=centos-7
-    - env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian-8
+#  allow_failures:
+#    - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian8-3.8
