compatibility with puppet 3 paths

--- a/spec/acceptance/hiera.yaml
+++ b/spec/acceptance/hiera.yaml
@@ -2,6 +2,7 @@
 :backends:
   - yaml
 :hierarchy:
+  - default
   - common
 :yaml:
   :datadir: '/etc/puppetlabs/code/environments/production/hieradata'
