--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
   - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
   - PUPPET_VERSION="~> 4.3.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 4.7.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 4.8.0" STRICT_VARIABLES=yes
 matrix:
   include:
     - rvm: 2.3.2
