enable automated tests on SLES (#68)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ rvm:
 # see http://rubies.travis-ci.org/
   - 1.9.3
   - 2.1.10
-  - 2.2.7
   - 2.3.3
 env:
 #  - BEAKER_set="debian-8-docker"
@@ -37,7 +36,7 @@ env:
   - PUPPET_VERSION="~> 4.10.0" STRICT_VARIABLES=yes
 matrix:
   include:
-    - rvm: 2.3.2
+    - rvm: 2.3.3
       dist: trusty
       env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=centos7-3.8
       script: bundle exec rake acceptance
@@ -49,22 +48,28 @@ matrix:
     #  script: bundle exec rake acceptance
     #  services: docker
     #  sudo: required
-    - rvm: 2.3.2
+    - rvm: 2.3.3
       dist: trusty
       env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian8-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
-    - rvm: 2.3.2
+    - rvm: 2.3.3
       dist: trusty
       env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian8-4.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
-    - rvm: 2.3.2
+    - rvm: 2.3.3
       dist: trusty
       # includes puppet provisioning (will included latest puppet version)
       env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
+      script: bundle exec rake acceptance
+      services: docker
+      sudo: required
+    - rvm: 2.3.3
+      dist: trusty
+      env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
       script: bundle exec rake acceptance
       services: docker
       sudo: required
@@ -73,14 +78,6 @@ matrix:
       env: PUPPET_VERSION="~> 4.9.0" STRICT_VARIABLES=yes
     - rvm: 1.9.3
       env: PUPPET_VERSION="~> 4.10.0" STRICT_VARIABLES=yes
-    - rvm: 2.2.7
-      env: PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
-    - rvm: 2.2.7
-      env: PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
-    - rvm: 2.2.7
-      env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes
-    - rvm: 2.2.7
-      env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
     - rvm: 2.3.3
       env: PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
     - rvm: 2.3.3
@@ -89,5 +86,5 @@ matrix:
       env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes
     - rvm: 2.3.3
       env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
-#  allow_failures:
-#    - env: RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=debian8-3.8
+  allow_failures:
+    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
