--- a/spec/acceptance/nodesets/debian9-4.10.yml
+++ b/spec/acceptance/nodesets/debian9-4.10.yml
@@ -1,13 +1,13 @@
 HOSTS:
-  debian-8-x64:
-    platform: debian-8-amd64
+  debian-9-x64:
+    platform: debian-9-amd64
     hypervisor : docker
-    image: deric/jessie-puppet:3.6.2
+    image: deric/stretch-puppet:4.10.8
     docker_preserve_image: false
     roles:
       - agent
-    debug: true
+    debug: false
 CONFIG:
   masterless: true
-  log_level: verbose
+  log_level: trace
   type: foss
