--- a/.travis.yml
+++ b/.travis.yml
@@ -57,3 +57,4 @@ matrix:
       sudo: required
   allow_failures:
     - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
+    - env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
