--- a/.travis.yml
+++ b/.travis.yml
@@ -59,3 +59,5 @@ matrix:
   allow_failures:
     - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
     - env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
+    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian9-4.10
+    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian8-4.8
