--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,12 @@ matrix:
       sudo: required
     - rvm: 2.3.3
       dist: xenial
+      env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian9-6.3
+      script: bundle exec rake acceptance
+      services: docker
+      sudo: required
+    - rvm: 2.3.3
+      dist: xenial
       # includes puppet provisioning (will included latest puppet version)
       env: PUPPET_install=yes RAKE_ENV=ci PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=ubuntu-14.04
       script: bundle exec rake acceptance
@@ -65,4 +71,4 @@ matrix:
   allow_failures:
     - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
     - env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
-    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian9-5.5
+    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian9-6.3
