--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ rvm:
   - 2.4.4
   - 2.5.5
 env:
-  - PUPPET_VERSION="~> 4.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
-  - PUPPET_VERSION="~> 5.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
+  - PUPPET_VERSION="~> 4.10" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
+  - PUPPET_VERSION="~> 5.5" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
   - PUPPET_VERSION="~> 6.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
 matrix:
   include:
@@ -64,4 +64,6 @@ matrix:
       sudo: required
   allow_failures:
     - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=sles13-3.8
+    - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian8-4.10
     - env: RAKE_ENV=ci BEAKER_debug=true BEAKER_set=debian9-4.10
+    - env: PUPPET_VERSION="~> 4.10" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=4
